# promptimizer

./: README.md  main.py  pyproject.toml
prompt_optimizer/: trainer.py
prompt_optimizer/tasks/: metaprompt.py  scone.py  simpleqa.py  ticket_classification.py  tweet_generator.py
src/promptim/: __main__.py  trainer.py
