[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "A framework for optimizing prompts through multi-task evaluation and iterative improvement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.2.3",
    "langchain-openai",
    "pandas>=0.2.4",
    "rich",
]

[tool.setuptools]
packages = ["prompt_optimizer"]
